--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,7 +6,7 @@ body {
     text-align: center;
 }
 
-img {
+.curvedImg {
     object-fit: contain;
     object-position: center;
     vertical-align: center;
@@ -25,3 +25,5 @@ h1, h2, h3, h5 {
     text-align: justify;
     font-size: large;
 }
+
+
