Good enough changes for the evening
Time of push - 3:50 AM

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,7 +2,7 @@ body {
     background-color: #202531;
     color: #ffffff;
     margin: auto;
-    padding: 2%;
+    padding: 0;
     text-align: center;
 }
 
@@ -28,5 +28,89 @@ h1, h2, h3, h5 {
 
 #collapseText{
     color:#202531;
+}
+
+.btn-primary {
+    background-color:#202531;
+    border-color: #ffffff;
+}
+
+.btn-primary :hover{
+    background-color: crimson;
+    
+}
+
+#video {
+    display: flex;
+}
+
+/* Mobile phones */
+#contentDiv {
+    /* debugging */
+    /* background-color: rgb(98, 122, 131); */
+
+    padding:2%;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+    #contentDiv {
+        /* debugging */
+        /* background-color: rgb(106, 69, 0); */
+
+        padding:10%;
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    #contentDiv {
+        /* debugging */
+        /* background-color: rgb(116, 87, 92); */
+
+        padding:15%;
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+    #contentDiv {
+        /* debugging */
+        /* background-color: rgb(60, 98, 60); */
+        
+        padding:20%;
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    #contentDiv {
+        /* debugging */
+        /* background-color: rgb(102, 56, 102); */
+
+        padding:25%;
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+}
+
+/* Extra extra large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {
+    #contentDiv {
+        /* debugging */
+        /* background-color: rgb(73, 73, 73); */
+
+        padding:30%;
+        padding-top: 0;
+        padding-bottom: 0;
+    }
 }
 
