--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -17,7 +17,7 @@ body {
     height: auto;
 }
 
-h1, h2, h3, h5 {
+h1, h2, h5 {
     font-weight: lighter;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
@@ -50,6 +50,10 @@ h1, h2, h3, h5 {
     margin-left: 10px; /* Space between nav items */
 }
 
+.row{
+    padding:1%;
+}
+
 
 #video {
     display: flex;
@@ -58,12 +62,25 @@ h1, h2, h3, h5 {
 /* Mobile phones */
 #contentDiv {
     /* debugging */
-    background-color: rgb(98, 122, 131);
+    /* background-color: rgb(98, 122, 131); */
 
     padding:2%;
     padding-top: 0;
     padding-bottom: 0;
 }
+
+#subsec{
+    font-style: italic;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    padding-left: 5%;
+}
+
+#animBG{
+    background-color: #2c3855;
+    border-radius: 15px;
+}
+
 .nav {
     padding:1%;
     padding-top: 0;
@@ -74,11 +91,15 @@ h1, h2, h3, h5 {
 @media (min-width: 576px) {
     #contentDiv {
         /* debugging */
-        background-color: rgb(106, 69, 0);
+        /* background-color: rgb(106, 69, 0); */
 
         padding:10%;
         padding-top: 0;
         padding-bottom: 0;
+    }
+    #subsec{
+        text-align: left;
+        font-style: italic;
     }
 }
 
@@ -86,7 +107,7 @@ h1, h2, h3, h5 {
 @media (min-width: 768px) {
     #contentDiv {
         /* debugging */
-        background-color: rgb(116, 87, 92);
+        /* background-color: rgb(116, 87, 92); */
 
         padding:15%;
         padding-top: 0;
@@ -98,7 +119,7 @@ h1, h2, h3, h5 {
 @media (min-width: 992px) {
     #contentDiv {
         /* debugging */
-        background-color: rgb(60, 98, 60);
+        /* background-color: rgb(60, 98, 60); */
         
         padding:20%;
         padding-top: 0;
@@ -110,7 +131,7 @@ h1, h2, h3, h5 {
 @media (min-width: 1200px) {
     #contentDiv {
         /* debugging */
-        background-color: rgb(102, 56, 102);
+        /* background-color: rgb(102, 56, 102); */
 
         padding:25%;
         padding-top: 0;
@@ -122,7 +143,7 @@ h1, h2, h3, h5 {
 @media (min-width: 1400px) {
     #contentDiv {
         /* debugging */
-        background-color: rgb(73, 73, 73);
+        /* background-color: rgb(73, 73, 73); */
 
         padding:30%;
         padding-top: 0;
