--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,7 +14,6 @@ body {
 .poem {
     text-align: left;
     padding: 5%;
-
 }
 
 .curvedImg {
@@ -113,10 +112,17 @@ h1, h2, h5 {
 }
 
 .btn-primary, .nav-link {
+    background-color: #3d2548;
+    color: #ffffff;
+    border: 1px solid #ffffff;
+    text-decoration: none;
+    border-radius: 0.25rem;
+    transition: background-color 0.2s, color 0.2s;
+}
+.btn-secondary {
     background-color: #202531;
     color: #ffffff;
     border: 1px solid #ffffff;
-    padding: 0.5rem 1rem;
     text-decoration: none;
     border-radius: 0.25rem;
     transition: background-color 0.2s, color 0.2s;
@@ -126,10 +132,6 @@ h1, h2, h5 {
     background-color: #ffffff;
     color: #202531;
     border-color: #202531;
-}
-
-.nav-item + .nav-item {
-    margin-left: 10px; /* Space between nav items */
 }
 
 .row{
@@ -166,10 +168,8 @@ h1, h2, h5 {
     border-radius: 15px;
 }
 
-.nav {
-    padding:1%;
-    padding-top: 0;
-    padding-bottom: 0;
+.nav-item {
+    padding:5px;
 }
 
 /* Small devices (landscape phones, 576px and up) */
@@ -197,6 +197,16 @@ h1, h2, h5 {
         padding:15%;
         padding-top: 0;
         padding-bottom: 0;
+    }
+    .nav-item {
+        padding-left: 5px;
+        padding-right: 5px; 
+    }
+    #navVertLeft{
+        border-left: #ffffff 1px solid;
+    }
+    #navVertRight{
+        border-right: #ffffff 1px solid;
     }
 }
 
