--- a/css/projects.css
+++ b/css/projects.css
@@ -6,6 +6,16 @@
     background-color: green;
 }
 
+#myCollapseButton {
+  margin-top: 2vw;
+}
+
+#subsecBG{
+  color: #ffffff;
+  background-color: #2c3855;
+  border-radius: 15px;
+}
+
 .project-card {
     position: relative;
     overflow: hidden;
@@ -14,6 +24,9 @@
     height: 200px;
     border-radius: 12px;
     transition: transform 0.3s ease;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-top: 1rem;
   }
   
   .project-card img {
