--- a/css/projects.css
+++ b/css/projects.css
@@ -104,6 +104,7 @@
     overflow-y: auto;
     max-height: 90vh;
     position: relative;
+    padding-bottom: 100px;
   }
   
   .modal-content img {
